2000-01-07  Jonathan Blandford  <jrb@redhat.com>

	* gdk-pixbuf/gdk-pixbuf-io.c: Added progressive animation loading.
	* gdk-pixbuf/gdk-pixbuf-io.h: Added progressive animation loading.
	* gdk-pixbuf/gdk-pixbuf-loader.c: Added progressive animation
	loading.
	* gdk-pixbuf/gdk-pixbuf-loader.h: Added progressive animation
	loading.
	* gdk-pixbuf/io-gif.c (image_load_increment): I think the
	ref-counting mess is finally fixed.  Added progressive animation
	loading. 

	* doc/tmpl/gdk-pixbuf-loader.sgml: much longer long description
	added. 

2000-01-05  Owen Taylor  <otaylor@redhat.com>

	* gdk-pixbuf/pixops/pixops.c (pixops_process): Fix computation of end of run indices.
	  
	* gdk-pixbuf/pixops/pixops.c: Fix double increments when dest_channels == 4.
	  (Pointed out by Tomas Ogren)

2000-01-05  Mark Crichton  <crichton@gimp.org>

	* gdk-pixbuf/gdk-pixbuf-loader.c (gdk_pixbuf_loader_eat_header_write): 
	Return 0 if gdk_pixbuf_load_loader_module returns FALSE.

2000-01-05 Elliot Lee <sopwith@redhat.com>
	* gdk-pixbuf/pixops/Makefile.am: Link with -lm (to get 'ceil' function)

2000-01-05  Owen Taylor  <otaylor@redhat.com>

	* doc/Makefile.am doc/gdk-pixbuf-sections.txt
	  doc/gdk-pixbuf.sgml doc/tmpl/scaling.sgml: 
	Added scaling functions into gtk-doc framework.

	* gdk-pixbuf/gdk-pixbuf-scale.c: Documentation fixes.

	* gdk-pixbuf/testpixbuf-scale.c (expose_cb): Simplify a bit.

	* gdk-pixbuf/pixops/pixops.c (pixops_composite_color): Return
	immediately if scale_x or scale_y is 0.

2000-01-05  Owen Taylor  <otaylor@redhat.com>

	* gdk-pixbuf/pixops/timescale.c: quick fix for initializing
	arrays in benchmark.

2000-01-05  Jonathan Blandford  <jrb@redhat.com>

	* gdk-pixbuf/gdk-pixbuf-io.h: Change the order of the update func
	to make it more compatible with the rest of GTK.  Added animation
	framework for progressive loading.
 
	* gdk-pixbuf/io-bmp.c (image_begin_load): Modified to handle new
	system.  
	* gdk-pixbuf/io-ico.c (image_begin_load): ditto