@@ -1,5 +1,8 @@
 2000-01-07  Jonathan Blandford  <jrb@redhat.com>
 
+	* gdk-pixbuf/gdk-pixbuf-xform.c (gdk_pixbuf_rotate): comment out
+	debugging printing.
+
 	* gdk-pixbuf/gdk-pixbuf-io.c: Added progressive animation loading.
 	* gdk-pixbuf/gdk-pixbuf-io.h: Added progressive animation loading.
 	* gdk-pixbuf/gdk-pixbuf-loader.c: Added progressive animation
@@ -9,6 +12,7 @@
 	* gdk-pixbuf/io-gif.c (image_load_increment): I think the
 	ref-counting mess is finally fixed.  Added progressive animation
 	loading. 
+	(gif_get_lzw): remove memory_leak
 
 	* doc/tmpl/gdk-pixbuf-loader.sgml: much longer long description
 	added. 
